--- a/foundItems.html
+++ b/foundItems.html
@@ -1,8 +1,9 @@
-<h1>Result</h1>
 <div ng-if="list.isEmpty()">Nothing found</div>
 <ul>
   <li ng-repeat="item in list.found">
-    {{item.name}}, {{item.short_name}}, {{item.description}}
-    <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+    Name: {{item.name}}<br>
+    Short Name: {{item.short_name}}<br> 
+    Description: {{item.description}}<br>
+    <button class="btn btn-primary" ng-click="list.onRemove({index: $index});">Don't want this one!</button>
   </li>
 </ul>
