--- a/foundItems.html
+++ b/foundItems.html
@@ -1,5 +1,6 @@
 <br>
 <div ng-if="list.isEmpty()">Nothing found</div>
+<div>
 <ul>
   <li ng-repeat="item in list.found">
     Name: {{item.name}}<br>
@@ -8,3 +9,4 @@
     <button class="btn btn-primary" ng-click="list.onRemove({index: $index});">Don't want this one!</button>
   </li>
 </ul>
+</div>
