--- a/foundItems.html
+++ b/foundItems.html
@@ -1,4 +1,4 @@
-<br>
+<div>
 <div ng-if="list.isEmpty()">Nothing found</div>
 <div>
 <ul>
@@ -9,4 +9,5 @@
     <button class="btn btn-primary" ng-click="list.onRemove({index: $index});">Don't want this one!</button>
   </li>
 </ul>
+</div>
 </div>
